Add initial mileage to vehicles [fixes#124143111]

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -978,8 +978,9 @@ en:
   vehicle_form_accessibility_equipment_label: "Accessibility Equipment"
   vehicle_form_details_heading: "Details"
   vehicle_form_information_heading: "Additional Information"
-  vehicle_form_reportable_label: "Vehicle should appear on vehicle report"
-  vehicle_form_last_odometer_reading: "Last reported mileage"
+  vehicle_form_reportable_label: "Vehicle Should Appear on Vehicle Report"
+  vehicle_form_last_odometer_reading: "Last Reported Mileage"
+  vehicle_form_initial_mileage: "Initial Mileage"
   vehicle_overdue_events: "Maintenance Overdue"
   vehicle_expired_warranties: "Expired Warranties"
   vehicle_form_submit: "Submit"
