Admin can update user email [fixes#124143471]

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -532,6 +532,11 @@ en:
   last_login: "Last Login"
   expires_at: "Account Expires At"
   change_password: "Change Password"
+  change_email: "Change Email"
+  current_email: "Current Email"
+  new_email: "New Email"
+  change_email_submit: "Submit"
+  change_email_heading: "Change Email"
   change_role: "Change role"
   delete_role_confirm: "Are you sure?"
   create_user_link_text: "Create User"
