Ability to mark trip completion until the day of trip appointment [fixes#124142901]

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -491,7 +491,7 @@ en:
   #trips validation erros
   driver_is_valid_for_vehicle_validation_error: "is not the driver for the selected vehicle during this vehicle's run."
   vehicle_has_open_seating_capacity_validation_error: "There's not enough open capacity on this run to accommodate this trip"
-  completable_until_trip_appointment_time_validation_error: "cannot be set as complete until end time of the trip"
+  completable_until_trip_appointment_day_validation_error: "cannot be set as complete until the day of the trip appointment"
   vehicle_has_mobility_device_capacity_validation_error: "There's not enough mobility device capacity on this run to accommodate this trip"
   outbound_trip_dropoff_time_no_later_than_return_trip_pickup_time: "Dropoff time should be no later than return trip's pickup time"
   return_trip_pickup_time_no_earlier_than_outbound_trip_dropoff_time: "Pickup time should be no earlier than outbound trip's appointment time"
