--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,6 +31,8 @@ en:
   city: "City"
   state: "State"
   zip: "Zip Code"
+  use_geocoder: 'User Geocoder?'
+  city_state_zip: "City/State/Zip"
   phone_number: "Phone Number"
   in_district: "In UTA District"
   unspecified: "Unspecified"
@@ -47,6 +49,7 @@ en:
   must_have_one_address: 'Must have at least one address'
   create_provider_address_text: 'Create Address'
   geocode_address_required: 'A geocoded address is required, please type and select an address in the Address field'
+  address_required: 'Please type address in the Address fields'
   same_address_exists_for_customer: 'Same address was created for the customer. Please click Edit Details to edit it if needed.'
   #cab trips
   cab: 'Cab'
