Driver manifest report locales

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -722,8 +722,6 @@ en:
   trip_funding_sources: "Trip Funding Sources"
   daily_manifest_title: "Manifest"
   daily_manifest_heading: "Transportation Manifest"
-  driver_manifest_title: "Driver Manifest"
-  driver_manifest_heading: "Driver Manifest"
   unspecified_driver: "Unspecified driver"
   cab_trips: "Cab Trips"
   daily_trips_title: "Daily Trips"
@@ -755,6 +753,35 @@ en:
   daily_manifest_by_half_hour_label: "Daily Manifest By Half Hour"
   daily_manifest_by_half_hour_with_cab_summary_label: "Daily Manifest By Half Hour with Cab Summary"
   verify_runs: "Verify Runs"
+  #driver manifest report
+  driver_manifest_title: "Driver Manifest"
+  driver_manifest_heading: "Driver Manifest"
+  driver_manifest_date: "Date"
+  driver_manifest_vehicle: "Vehicle"
+  driver_manifest_run: "Run"
+  driver_manifest_scheduled_run_time: "Scheduled Run Time"
+  driver_manifest_run_start_time: "Run Start Time"
+  driver_manifest_run_end_time: "Run End Time"
+  driver_manifest_pullout_mileage: "Pullout Mileage"
+  driver_manifest_pullout_hour_minute: "Pullout Hour/Minute"
+  driver_manifest_pullin_mileage: "Pullin Mileage"
+  driver_manifest_pullin_hour_minute: "Pullin Hour/Minute"
+  driver_manifest_p_d: "P/D"
+  driver_manifest_client_address: "Client/Address"
+  driver_manifest_pickup_time: "Pickup Time"
+  driver_manifest_appt_time: "Appt Time"
+  driver_manifest_pickup: "Pick Up"
+  driver_manifest_dropoff: "Drop Off"
+  driver_manifest_trip_notes: "Trip Notes"
+  driver_manifest_time_arrive: "Time Arrive"
+  driver_manifest_time_depart: "Time Depart"
+  driver_manifest_customer: "Customer"
+  driver_manifest_guests: "Guests"
+  driver_manifest_attendants: "Attendants"
+  driver_manifest_total_passengers: "Total Passengers"
+  driver_manifest_donation_$: "Donation $"
+  driver_manifest_mobility_devices: "Mobility Devices"
+  driver_manifest_mobility_notes: "Mobility Notes"
   #service summary
   service_summary_start_date: 'Start Date:'
   service_summary_end_date: 'End Date:'
