Further tweaks in driver manifest

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -757,9 +757,9 @@ en:
   driver_manifest_title: "Driver Manifest"
   driver_manifest_heading: "Driver Manifest"
   driver_manifest_date: "Date"
-  driver_manifest_vehicle: "Vehicle"
+  driver_manifest_vehicle: "Veh."
   driver_manifest_run: "Run"
-  driver_manifest_scheduled_run_time: "Scheduled Run Time"
+  driver_manifest_scheduled_run_time: "Run Time"
   driver_manifest_run_start_time: "Run Start Time"
   driver_manifest_run_end_time: "Run End Time"
   driver_manifest_pullout_mileage: "Pullout Mileage"
