--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -471,14 +471,14 @@ en:
   log_out_link_text: "Log out"
   application_trips_link_text: "Trips"
   application_runs_link_text: "Runs"
-  application_cabs_link_text: "Cab trips"
+  application_cabs_link_text: "Cabs"
   application_customers_link_text: "Customers"
   application_reports_link_text: "Reports"
   application_drivers_link_text: "Drivers"
   application_vehicles_link_text: "Vehicles"
   application_dispatch_link_text: "Dispatch"
-  application_admin_link_text: "Admin"
-  current_provider_settings_link_text: "Settings"
+  application_admin_link_text: "System Admin"
+  current_provider_settings_link_text: "Provider Settings"
   #customer layout
   active_customers_link_text: "Active Customers"
   all_customers_link_text: "All Customers"
@@ -1098,7 +1098,7 @@ en:
   guest_count_column: 'Guest Count'
   attendant_count_column: 'Attendant Count'
   # trips runs tab
-  application_trips_runs_link_text: 'Trips Runs'
+  application_trips_runs_link_text: 'Dispatch'
   trips_runs: 'Trips Runs'
   trips_runs_filter: 'Filter'
   run_result: 'Result'
