1. Run name unique per day (D.1); 2. Vehicle/driver cannot be assigned to a overlapping run (D.2)

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1110,6 +1110,7 @@ en:
   not_fit_in_run_schedule: 'Trip schedule does not fit in run schedule'
   vehicle_unavailable: 'Vehicle is not available'
   driver_unavailable: 'Driver is not available'
+  assigned_to_other_overlapping_run: 'has been assigned to another overlapping run'
   unknown_error: 'There was something wrong with the request, please try again.'
   # address upload
   address_file_uploaded: 'Address file was uploaded.'
