--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -81,6 +81,7 @@ en:
   is_mailing_address: 'Mailing'
   customer_providers_panel: 'Authorized Providers'
   customer_eligibility_panel: 'Eligibility'
+  customer_eligibilities: 'Customer Eligibilities'
   customer_donations_panel: 'Donations'
   customer_others_panel: 'Others'
   customer_inactivate_panel: 'Inactivate'
