Add comments to subscription trips and runs (C.15, D.5)

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -903,6 +903,7 @@ en:
   repetition: "Repetitions"
   repetition_vehicle: "Vehicle"
   repetition_driver: "Driver"
+  repetition_comments: "Comments"
   mark_as_called_back: "Mark as Called Back:"
   group_size: "Group Size"
   passengers: "Passengers"
