--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -904,6 +904,8 @@ en:
   repetition_vehicle: "Vehicle"
   repetition_driver: "Driver"
   repetition_comments: "Comments"
+  no_repeating_trips: "No subscription trips"
+  no_repeating_runs: "No subscription runs"
   mark_as_called_back: "Mark as Called Back:"
   group_size: "Group Size"
   passengers: "Passengers"
