Show customer trip summary on new trip page (C.22)

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -134,6 +134,7 @@ en:
   reassociate_customer_trips: "Associate this customer's trips with another customer."
   group_name: "Group Name"
   no_trips_yet: "No trips yet."
+  no_trips: "No trips."
   cctc_RC_label: "RC"
   cctc_STF_label: "STF"
   cctc_new_riders_label: "# Riders New This Month"
@@ -631,6 +632,8 @@ en:
   configure_provider_operating_hours: 'Configure Operating Hours'
   update_provider_operating_hours: 'Update'
   provider_not_available_for_trip: 'Provider is not available for the trip.'
+  customer_trip_summary_for: "Trips for "
+  view_customer_trip_summary: "Trip Summary"
   #reports
   service_performed: "Service Performed"
   odometer_reading: "Odometer Reading"
