Implement back-end to support creating a new trip or repeating trip based on customer trip summary(C.22)

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -161,12 +161,12 @@ en:
   site_title: "Ridepilot"
   new_trip: "New Trip"
   new_repeating_trip: "New Subscription Trip"
-  repeating_trips: "View Subscription Trips"
+  repeating_trips: "View Subscription Trip Templates"
   repeating_trip: "Subscription Trip"
   repeating_trips_heading: "Subscription Trips"
   new_repeating_trip_text: "Create New Subscription Trip"
   new_repeating_run: "New Subscription Run"
-  repeating_runs: "View Subscription Runs"
+  repeating_runs: "View Subscription Run Templates"
   repeating_run: "Subscription Run"
   repeating_runs_heading: "Subscription Runs"
   new_repeating_run_text: "Create New Subscription Run"
