--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -172,6 +172,8 @@ en:
   repeating_runs_heading: "Subscription Runs"
   new_repeating_run_text: "Create New Subscription Run"
   date: "Date"
+  start_date: "Start Date"
+  end_date: "Stop Date"
   add: "Add"
   edit: "Edit"
   delete: "Delete"
