--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -73,6 +73,7 @@ en:
     other: "Edit %{count} cab trips"
   #eligibilities
   eligible: 'Eligible'
+  age_eligible: 'Age Eligible'
   not_eligible: 'Not Eligible'
   ineligible_reason: 'Why not eligible?'
   #customers
