--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -824,6 +824,10 @@ en:
   line_number_label: "Line #"
   out_of_district: "Out of District"
   trips: "Trips"
+  show_last_label: "Show last"
+  show_future_label: "Show future"
+  trips_label: "Trips"
+  date_range_filter: "Date range"
   total_trips: "Total Trips"
   total_miles_driven: "Total Miles Driven"
   turndowns: "Turndowns"
