Display location notes if any in trip details page [RPII-38]

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -912,8 +912,10 @@ en:
     other: "%{count} errors prohibited this trip from being saved:"
   appointment_time: "Appointment Time"
   pickup_address: "Pickup Address"
+  pickup_address_notes: "Pickup Address Notes"
   customer_phone: "Customer Phone"
   dropoff_address: "Dropoff Address"
+  dropoff_address_notes: "Dropoff Address Notes"
   dropoff_phone: "Dropoff Phone"
   repetition: "Repetitions"
   repetition_vehicle: "Vehicle"
