Clarify button label

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -996,7 +996,7 @@ en:
   trip_direction_column: 'Trip Direction'
   change_selected_trips_result: 'Change Result of Selected Trips'
   ask_for_trip_result_reason_message: "Would you like to enter a trip cancellation comment?"
-  trip_result_modal_dismiss: "No thanks"
+  trip_result_modal_dismiss: "Skip Comment"
   trip_result_modal_cancel: "Cancel"
   trip_result_confirm_message: "Are you sure you want to change the trip result?"
   
