--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -192,6 +192,7 @@ en:
   repeating_run: "Subscription Run"
   repeating_runs_heading: "Subscription Runs"
   new_repeating_run_text: "Create New Subscription Run"
+  repeating_schedule: 'Schedule'
   date: "Date"
   start_date: "Start Date"
   end_date: "Stop Date"
