Add additional translations and fix flash messages

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1124,6 +1124,8 @@ en:
   submit_new_password_form_verification_question: "Reset Password by Answering a Security Question"
   answer_verification_questions_heading: "Answer a Security Question to Reset your Password"
   submit_answer_verification_questions_form: "Submit Answer"
+  no_verification_questions_set: "User has not set up any security questions"
+  verification_question_incorrect_answer: "That answer is not correct"
 
   # Vehicle Maintenance Events
   vehicle_maintenance_event_form_error:
