User username rather than email to reset password

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1119,7 +1119,8 @@ en:
   reset_password: "Reset Password"
   add_verification_question: "Add a Security Question"
   add_verification_question_dialog_title: "Add a Security Question"
-  new_password_form_heading: "Enter your Email Address"
+  new_password_form_heading: "Enter your Username"
+  new_password_form_identifier_label: "Username"
   submit_new_password_form_reset: "Send a Password Reset Email"
   submit_new_password_form_verification_question: "Reset Password by Answering a Security Question"
   answer_verification_questions_heading: "Answer a Security Question to Reset your Password"
